--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>3. git remote -v</h2>
     <h2>4. git add .</h2>
     <h2>5. git commit -m "birinchi commit"</h2>
-    <h2>6. git branch -U main</h2>
+    <h2>6. git branch -M main</h2>
     <h2>7. git push origin main</h2>
     </div>
 </body>
